* new: ./files, sidu-installer.substvars (dpkg-buildpackage)
* shellserver.sh: config file in /etc/sidu-installer. Creating and chmod of task directory.
* install.sh: configfile from /etc/sidu-installer Fix: building answer file, removing progress file
* temporary files now in /var/lib/sidu-installer
* format of the progress file: may be a factor (0..1.0) instead of procent. "end" means 100%
* Fix: timezoneinfo.txt will be created in ${tempdir}
* New field: mountonboot
* Parameter file for fll-installer: HD_IGNORECHECK and HD_AUTO will be set from input fields

v0.05
* Change URL encoding back to install.php/home
* session.php: Repairing wrong settings of $_SERVER['PATH_INFO']
* userdata.php: Fix: open() can fail
* control: ${shlibs:Depends} removed
* install.php: Debug code

v0.06 shellserver as daemon, logging
* install.sh: optional logging into a file, no questions using rm, parameters from shellserver.conf
* shellserver.sh: optional logging, new option --daemon, no questions using rm
* startgui.sh: using $CONSOLE and $CONSOLE_ARGS instead of konsole -e
* sidu-installer.install: etc/* /usr/bin/*
* shellserver.conf: New: CONSOLE, CONSOLE_ARGS, BIN_FLL_INSTALLER
* New: installer can be run as daemon: etc/* usr/bin/* 

v0.07 Marking i18n entries, exclusion of devices, fix: HD_FORMAT
* Configuration: %= marks entries which must be translated
* New: Exclude of some devices can be configured.
* Fix: HD_FORMAT will be set to 'no' if HD_CHOICE is '-' (no change)

v0.08 Fix passwords, sidu-installer in /etc/hosts
* Until a general solution is found the passwords are fix.
* Insertion of the virtual host sidu-installer in /etc/hosts (postinst)

v0.09 building password hash, '-' test of passw, inst. ready message
* Encoding password with mkpasswd
* Testing password for '-' at the beginning.
* Replacing the button when the installation has been finished.
* Minimum length of a password is configurable.