@@ -20,7 +20,7 @@
 .TOO_SHORT%=Too short!
 .TOO_LONG%=Too long!
 .NOT_EQUAL%=Passwords are not equal!
-.NOT_MINUS%='-' not allowed at the beginning!
+.NOT_MINUS%=- not allowed at the beginning!
 
 #Plugin specific:
 
@@ -37,6 +37,7 @@ home.txt_wiki%=Wiki
 home.txt_usb_installer%=live usbstick installer
 home.txt_alt_usb%=Usb stick
 home.txt_alt_warning%=Usb stick
+home.txt_clear_config%=clear configuration
 home.preload.count=3
 home.preload.0=${tempdir}timezoneinfo.txt;timezoneinfo;current
 home.preload.1=${tempdir}timezoneinfo.txt;timezoneinfo;all
