@@ -21,7 +21,7 @@
 .TOO_SHORT%=Zu wenig Zeichen!
 .TOO_LONG%=Zu viele Zeichen!
 .NOT_EQUAL%=Passwörter sind nicht gleich!
-.NOT_MINUS%='-' ist nicht erlaubt als erstes Zeichen!
+.NOT_MINUS%=- nicht erlaubt als erstes Zeichen!
 
 #Plugin specific:
 
@@ -38,6 +38,7 @@ home.txt_wiki%=Wiki
 home.txt_usb_installer%=Live usbstick installer
 home.txt_alt_usb%=USB-Stick
 home.txt_alt_warning%=Warnung
+home.txt_clear_config%=Konfiguration löschen
 home.preload.count=3
 home.preload.0=${tempdir}timezoneinfo.txt;timezoneinfo;current
 home.preload.1=${tempdir}timezoneinfo.txt;timezoneinfo;all
